--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,343 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 10;
+  src: url("/font/dana/fonts/eot/dana-fanum-thin.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-thin.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-thin.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-thin.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 200;
+  src: url("/font/dana/fonts/eot/dana-fanum-extralight.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-extralight.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-extralight.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-extralight.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 300;
+  src: url("/font/dana/fonts/eot/dana-fanum-light.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-light.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-light.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-light.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 400;
+  src: url("/font/dana/fonts/eot/dana-fanum-regular.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-regular.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-regular.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 500;
+  src: url("/font/dana/fonts/eot/dana-fanum-medium.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-medium.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-medium.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-medium.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 600;
+  src: url("/font/dana/fonts/eot/dana-fanum-demibold.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-demibold.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-demibold.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-demibold.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 700;
+  src: url("/font/dana/fonts/eot/dana-fanum-bold.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-bold.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-bold.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-bold.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 750;
+  src: url("/font/dana/fonts/eot/dana-fanum-ultrabold.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-ultrabold.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-ultrabold.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-ultrabold.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 800;
+  src: url("/font/dana/fonts/eot/dana-fanum-extrabold.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-extrabold.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-extrabold.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-extrabold.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 900;
+  src: url("/font/dana/fonts/eot/dana-fanum-black.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-black.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-black.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-black.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: bold;
+  src: url("/font/dana/fonts/eot/dana-fanum-bold.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-bold.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-bold.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-bold.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: normal;
+  src: url("/font/dana/fonts/eot/dana-fanum-regular.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-regular.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-regular.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+
+/**
+Iranic fonts
+**/
+
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 10;
+  src: url("/font/dana/fonts/eot/dana-fanum-thinitalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-thinitalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-thinitalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-thinitalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 200;
+  src: url("/font/dana/fonts/eot/dana-fanum-extralightitalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-extralightitalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-extralightitalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-extralightitalic.woff")
+      format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 300;
+  src: url("/font/dana/fonts/eot/dana-fanum-lightitalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-lightitalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-lightitalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-lightitalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 500;
+  src: url("/font/dana/fonts/eot/dana-fanum-mediumitalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-mediumitalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-mediumitalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-mediumitalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 600;
+  src: url("/font/dana/fonts/eot/dana-fanum-demibolditalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-demibolditalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-demibolditalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-demibolditalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 750;
+  src: url("/font/dana/fonts/eot/dana-fanum-ultrabolditalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-ultrabolditalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-ultrabolditalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-ultrabolditalic.woff")
+      format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 800;
+  src: url("/font/dana/fonts/eot/dana-fanum-extrabolditalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-extrabolditalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-extrabolditalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-extrabolditalic.woff")
+      format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: 900;
+  src: url("/font/dana/fonts/eot/dana-fanum-blackitalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-blackitalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-blackitalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-blackitalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: bold;
+  src: url("/font/dana/fonts/eot/dana-fanum-bolditalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-bolditalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-bolditalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-bolditalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+@font-face {
+  font-family: dana;
+  font-style: italic;
+  font-weight: normal;
+  src: url("/font/dana/fonts/eot/dana-fanum-regularitalic.eot");
+  src: url("/font/dana/fonts/eot/dana-fanum-regularitalic.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-8 */ url("/font/dana/fonts/woff2/dana-fanum-regularitalic.woff2")
+      format("woff2"),
+    /* FF39+,Chrome36+, Opera24+*/
+      url("/font/dana/fonts/woff/dana-fanum-regularitalic.woff") format("woff"); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
+
+html {
+  @apply font-dana;
+}
+body {
+  @apply overflow-hidden;
+}
+.h-screen-minus-60 {
+  height: calc(100vh - 60px);
+}
+
+.scroll {
+  scrollbar-width: 7px;
+  scrollbar-color: #00abb16e;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 7px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  @apply bg-primary rounded-sm;
+}
+
+.container {
+  @apply relative flex items-center justify-center gap-1 h-6;
+}
+
+.dot,
+.container::before,
+.container::after {
+  content: "";
+  @apply block h-[10.32px] w-[10.32px] rounded-full bg-primary transition-colors ease-linear;
+  transform: scale(0);
+}
+
+.container::before {
+  @apply animate-pulse-custom;
+  animation-delay: calc(1.3s * -0.375);
+}
+
+.dot {
+  @apply animate-pulse-custom;
+  animation-delay: calc(1.3s * -0.25);
+  animation-fill-mode: both;
+}
+
+.container::after {
+  @apply animate-pulse-custom;
+  animation-delay: calc(1.3s * -0.125);
+}
+
+@keyframes pulse-custom {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+
+@layer base {
+  .animate-pulse-custom {
+    animation: pulse-custom 1.3s ease-in-out infinite;
+  }
+}
